fix: исправлены вск замечания checkstyle