@@ -1,7 +1,9 @@
 package ru.kiryanovid.infrastructure.repositories;
 
 import io.vavr.control.Either;
-import org.springframework.beans.factory.annotation.Autowired;
+import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.Future;
+import java.util.stream.Collectors;
 import org.springframework.data.jpa.repository.JpaRepository;
 import org.springframework.stereotype.Repository;
 import ru.kiryanovid.domain.entity.errors.Failure;
@@ -11,18 +13,21 @@ import ru.kiryanovid.infrastructure.Convert;
 import ru.kiryanovid.infrastructure.models.TaskModel;
 import ru.kiryanovid.infrastructure.models.UserModel;
 
-import java.util.concurrent.CompletableFuture;
-import java.util.concurrent.Future;
-
+/**
+ * Реализация репозитория задач.
+ */
 @Repository
 public class TaskRepositoriesImpl implements TaskRepositories {
 
-    @Autowired
-    private Tasks tasks;
+  private final Tasks tasks;
 
-    @Override
-    public CompletableFuture<Either<Failure, Task>> create(Task task) {
-        var taskModel = new TaskModel(task.getId(),
+  public TaskRepositoriesImpl(Tasks tasks) {
+    this.tasks = tasks;
+  }
+
+  @Override
+  public CompletableFuture<Either<Failure, Task>> create(Task task) {
+    var taskModel = new TaskModel(task.getId(),
                 task.getName(),
                 task.getContentType(),
                 task.getDescription(),
@@ -35,13 +40,13 @@ public class TaskRepositoriesImpl implements TaskRepositories {
                 null,
                 null
         );
-        tasks.save(taskModel);
-        return null;
-    }
+    tasks.save(taskModel);
+    return null;
+  }
 
-    @Override
-    public Future<Either<Failure, Task>> update(Task task) {
-        var taskModel = new TaskModel(task.getId(),
+  @Override
+  public Future<Either<Failure, Task>> update(Task task) {
+    var taskModel = new TaskModel(task.getId(),
                 task.getName(),
                 task.getContentType(),
                 task.getDescription(),
@@ -54,21 +59,20 @@ public class TaskRepositoriesImpl implements TaskRepositories {
                 null,
                 null
         );
-        tasks.save(taskModel);
-        return null;
-    }
+    tasks.save(taskModel);
+    return null;
+  }
 
+  @Override
+  public Future<Either<Failure, Void>> delete(Integer id) {
+    tasks.deleteById(id);
+    return null;
+  }
 
-    @Override
-    public Future<Either<Failure, Void>> delete(Integer id) {
-        tasks.deleteById(id);
-        return null;
-    }
-
-    @Override
-    public CompletableFuture<Either<Failure, Task>> get(Integer id) {
-        var taskModel = tasks.findById(id).orElseThrow();
-        var task = Task.create(taskModel.getId(),
+  @Override
+  public CompletableFuture<Either<Failure, Task>> get(Integer id) {
+    var taskModel = tasks.findById(id).get();
+    var task = Task.create(taskModel.getId(),
                 taskModel.getName(),
                 taskModel.getContentType(),
                 taskModel.getDescription(),
@@ -81,12 +85,12 @@ public class TaskRepositoriesImpl implements TaskRepositories {
                 null,
                 null).get();
 
-        return CompletableFuture.completedFuture(Either.right(task));
-    }
+    return CompletableFuture.completedFuture(Either.right(task));
+  }
 
-    @Override
-    public CompletableFuture<Either<Failure, Iterable<Task>>> getAll() {
-        var taskList = tasks.findAll().stream().map(taskModel -> Task.create(taskModel.getId(),
+  @Override
+  public CompletableFuture<Either<Failure, Iterable<Task>>> getAll() {
+    var taskList = tasks.findAll().stream().map(taskModel -> Task.create(taskModel.getId(),
                 taskModel.getName(),
                 taskModel.getContentType(),
                 taskModel.getDescription(),
@@ -97,12 +101,15 @@ public class TaskRepositoriesImpl implements TaskRepositories {
                 taskModel.getDateExpired(),
                 null,
                 null,
-                null).get()).toList();
+                null).get()).collect(Collectors.toList());
 
-        return CompletableFuture.completedFuture(Either.right(taskList));
+    return CompletableFuture.completedFuture(Either.right(taskList));
 
-    }
+  }
 
-    public interface Tasks extends JpaRepository<TaskModel, Integer> {
-    }
+  /**
+   * ORM для доступа к данным задач в СУБД.
+   */
+  public interface Tasks extends JpaRepository<TaskModel, Integer> {
+  }
 }
