@@ -1,7 +1,9 @@
 package ru.kiryanovid.infrastructure.repositories;
 
 import io.vavr.control.Either;
-import org.springframework.beans.factory.annotation.Autowired;
+import java.util.Optional;
+import java.util.concurrent.CompletableFuture;
+import java.util.stream.Collectors;
 import org.springframework.data.jpa.repository.JpaRepository;
 import org.springframework.stereotype.Repository;
 import ru.kiryanovid.domain.entity.errors.Failure;
@@ -9,18 +11,22 @@ import ru.kiryanovid.domain.entity.users.User;
 import ru.kiryanovid.domain.repositories.UserRepositories;
 import ru.kiryanovid.infrastructure.models.UserModel;
 
-import java.util.Optional;
-import java.util.concurrent.CompletableFuture;
+/**
+ * Реализация репозитория пользователей.
+ */
 
 @Repository
 public class UserRepositoriesImpl implements UserRepositories {
 
-    @Autowired
-    private Users users;
+  private final Users users;
 
-    @Override
-    public CompletableFuture<Either<Failure, User>> create(User user) {
-        var userModel = new UserModel(
+  public UserRepositoriesImpl(Users users) {
+    this.users = users;
+  }
+
+  @Override
+  public CompletableFuture<Either<Failure, User>> create(User user) {
+    var userModel = new UserModel(
                 user.getId(),
                 user.getName(),
                 user.getEmail(),
@@ -28,13 +34,13 @@ public class UserRepositoriesImpl implements UserRepositories {
                 user.getImage(),
                 user.getRole()
         );
-        users.save(userModel);
-        return null;
-    }
+    users.save(userModel);
+    return null;
+  }
 
-    @Override
-    public CompletableFuture<Either<Failure, User>> update(User user) {
-        var userModel = new UserModel(
+  @Override
+  public CompletableFuture<Either<Failure, User>> update(User user) {
+    var userModel = new UserModel(
                 user.getId(),
                 user.getName(),
                 user.getEmail(),
@@ -42,47 +48,50 @@ public class UserRepositoriesImpl implements UserRepositories {
                 user.getImage(),
                 user.getRole()
         );
-        users.save(userModel);
-        return null;
-    }
+    users.save(userModel);
+    return null;
+  }
 
-    @Override
-    public CompletableFuture<Either<Failure, Void>> delete(Integer id) {
-        users.deleteById(id);
-        return null;
-    }
+  @Override
+  public CompletableFuture<Either<Failure, Void>> delete(Integer id) {
+    users.deleteById(id);
+    return null;
+  }
 
-    @Override
-    public CompletableFuture<Either<Failure, User>> get(Integer id) {
-        var userModel = users.findById(id).orElseThrow();
-        var user = User.create(userModel.getId(),
+  @Override
+  public CompletableFuture<Either<Failure, User>> get(Integer id) {
+    var userModel = users.findById(id).get();
+    var user = User.create(userModel.getId(),
                 userModel.getName(),
                 userModel.getEmail(),
                 userModel.getPassword(),
                 userModel.getImage(),
                 userModel.getRole()).get();
-        return CompletableFuture.completedFuture(Either.right(user));
-    }
+    return CompletableFuture.completedFuture(Either.right(user));
+  }
 
-    @Override
-    public CompletableFuture<Either<Failure, Integer>> getUserByEmail(String email) {
-        var countOfFound = users.countAllByEmail(email).get();
-        return CompletableFuture.completedFuture(Either.right(countOfFound));
-    }
+  @Override
+  public CompletableFuture<Either<Failure, Integer>> getUserByEmail(String email) {
+    var countOfFound = users.countAllByEmail(email).get();
+    return CompletableFuture.completedFuture(Either.right(countOfFound));
+  }
 
-    @Override
-    public CompletableFuture<Either<Failure, Iterable<User>>> getAll() {
-        var userList = users.findAll().stream().map(userModel -> User.create(userModel.getId(),
+  @Override
+  public CompletableFuture<Either<Failure, Iterable<User>>> getAll() {
+    var userList = users.findAll().stream().map(userModel -> User.create(userModel.getId(),
                 userModel.getName(),
                 userModel.getEmail(),
                 userModel.getPassword(),
                 userModel.getImage(),
                 userModel.getRole()
-        ).get()).toList();
-        return CompletableFuture.completedFuture(Either.right(userList));
-    }
+        ).get()).collect(Collectors.toList());
+    return CompletableFuture.completedFuture(Either.right(userList));
+  }
 
-    public interface Users extends JpaRepository<UserModel, Integer>{
-        Optional<Integer> countAllByEmail(String email);
-    }
+  /**
+   * ORM для доступа к данным пользователей в СУБД.
+   */
+  public interface Users extends JpaRepository<UserModel, Integer> {
+    Optional<Integer> countAllByEmail(String email);
+  }
 }
